Close #65: "In Auth Module services update swagger"
